References done for interfaces

--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -178,3 +178,11 @@
 	urldate      = {2020-08-25},
 	date				 = {2009-01-09},
 }
+
+@misc{DNP3Study,
+	author       = {T&D World},
+	title        = {Research Study: North American Utilities Use DNP3 for SCADA},
+	url          = {https://www.tdworld.com/test-and-measurement/article/20972407/research-study-north-american-utilities-use-dnp3-for-scada},
+	date         = {2019-03-30},
+	urldate      = {2020-08-25},
+}
