--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -150,6 +150,6 @@
 
   DNP3 on suunnattu sähköteollisuuden käyttöön, mutta se on myös käytössä esimerkiksi energia- ja vesiteollisuudessa. Pohjois-Amerikassa DNP3 on käytössä sähköverkon \gls{SCADA}-järjestelmissä, ja se onkin osittain kilpaileva sähköasemastandardi IEC 61850:n kanssa. 
 
-  IEEE 1815.1 -dokumentti määrittelee standardisoidun tavan linkittää yhteen data tämän ja IEC-standardin välillä \parencite{IEEE1815.1}. Tämä mahdollistaa IEC 61850-standardia käyttävien laitteiden lisäyksen IEEE 1815-protokollaiseen järjestelmään. Tämän on Pohjois-Amerikassa tärkeää, sillä siellä on laajasti käytössä IEEE 1815 standardi, mutta koska IEC 61850 on ominaisuuksiltaan laajempi, sen osuus tulee kasvamaan. Molempien standardien kanssa työskentelevä Bruce Muschlitz arveli vuonna 2009 DNP3:n häviävän keskinäisen kilpailun, sillä IEC 61850 täyttää kaikkien sidosryhmien tarpeet ominaisuuksien puolesta \parencite{DNPvsIEC}. Tosin näiden kahden standardin yhteensovittaminen on muuttanut tilannetta, eikä DNP3 tule välttämättä häviämään markkinoilta vielä pitkään aikaan.
+  IEEE 1815.1 -dokumentti määrittelee standardisoidun tavan linkittää yhteen data tämän ja IEC-standardin välillä \parencite{IEEE1815.1}. Tämä mahdollistaa IEC 61850-standardia käyttävien laitteiden lisäyksen IEEE 1815-protokollaiseen järjestelmään. Tämän on Pohjois-Amerikassa tärkeää, sillä siellä on laajasti käytössä IEEE 1815 standardi, mutta koska IEC 61850 on ominaisuuksiltaan laajempi, sen osuus tulee kasvamaan. Molempien standardien kanssa työskentelevä Bruce Muschlitz arveli vuonna 2009 DNP3:n häviävän keskinäisen kilpailun, sillä IEC 61850 täyttää kaikkien sidosryhmien tarpeet ominaisuuksien puolesta \parencite{DNPvsIEC}. Tosin näiden kahden standardin yhteensovittaminen on muuttanut tilannetta, eikä DNP3 tule välttämättä häviämään markkinoilta vielä pitkään aikaan. 2019 tehdyn kyselyn mukaan DNP3:a käytti 94\% kyselyyn vastanneista sähköntuotanto ja -jakeluyrityksistä, mutta IEC 61850:n osuus on kasvamassa \parencite{DNP3Study}.
 
   Vuonna 2013 DNP3 julkaisi dokumentin, joka auttaa verkonhaltijoita kommunikoimaan hajautetun energiantuotannon kanssa. Tämä dokumentti kuvaa standardoidun rajapinnan datalle ja joukon protokollapalveluita ja profiileja. Dokumentin kuvaamien profiilien tarkoitus on helpottaa hajautetun energiantuotannon liittämistä DNP3 järjestelmiin. Vuonna 2018 dokumenttia päivitettiin siten, että se lisäksi sisältää toiminnallisten ominaisuuden määrittelyt protokollalle, sekä linkityksen IEC-61850-7-420 tietomallin kanssa. Näiden uudistusten myötä DNP3 protokollaa voidaan käyttää älyinverttereiden ohjaukseen samalla tavalla kuin SunSpeciä tai IEC 61850-standardia, mutta myös käyttää näitä kolmea protokollaa rinnakkain toistensa kanssa. \parencite{DNP3Inv, DNP3AppNote}
