--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -1,4 +1,8 @@
-Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoitukseen. Yksittäisten lämpöpumppujen monitorointiin ja hallintaan on olemassa ratkaisuja. Nykyään lämpöpumpputoimittajat saattavatkin tarjoavat lämpöpumpun yhteyteen etäohjauksen mahdollistavia toimintoja ja sovelluksia. Suurempia hyötyjä saadaan kuitenkin useiden useiden yksiköiden muodostamien lämpöpumppupoolien ohjaamisesta. Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai niiden mahdollistamia sovelluksia.
+Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoitukseen. Yksittäisten lämpöpumppujen monitorointiin ja hallintaan on olemassa ratkaisuja. Nykyään lämpöpumpputoimittajat saattavatkin tarjoavat lämpöpumpun yhteyteen etäohjauksen mahdollistavia toimintoja ja sovelluksia. Suurempia hyötyjä saadaan kuitenkin useiden useiden yksiköiden muodostamien lämpöpumppupoolien ohjaamisesta. 
+
+Myös aurinkosähköjärjestelmien kommunikaatiorajapintoja voidaan hyödyntää eri tarkoituksiin. Halvimpia malleja lukuunottamatta monet valmistajat tarjoavat suoraan invertterissä etämonitorointimahdollisuuden verkon yli, joillakin on jopa kehitetty mobiilisovellus tätä varten. Lisäksi invertterit tarjoavat usein fyysisen rajapinnan esimerkiksi kodin automaatiojärjestelmään liittämistä varten. 
+
+Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai niiden mahdollistamia sovelluksia. Sovelluksia käydään läpi nykytekniikan puitteissa, mutta kappaleessa avataan myös tulevaisuudennäkymiä. 
 
 
 \section{Etämonitorointi ja -ohjaus}
@@ -14,11 +18,11 @@ Lämpöpumppujen kommunikaatiorajapintoja voidaan hyödyntää useaan eri tarkoi
 
   Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helpompaa tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
 
-  kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suuryttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
+  Kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suuryttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
 
   Lämpöpumpun etäohjaus voidaan toteuttaa myös itse, mikä vaatii käyttäjältä enemmän asiantuntemusta. Tällöin pitää ohjattavan lämpöpumpun tarjota jokin ohjausrajapinta, esimerkiksi modBUS-väylä tai vastaava, tai vähintäänkin lämpöpumpun pitää tukea tämän mahdollistavaa laajennusta. Käyttäjän pitää itse toteuttaa ainakin ohjauslogiikka, käyttöliittymä ja päättää minkälaista palvelinta haluaa ylläpitää näiden mahdollistamiseksi.
 
-  Yksittäisen lämpöpunpun ohjauksella saavutettavat hyödyt ovat lähinnä yksittäissen omakotitalokäyttäjän saavuttamia säästöjä tai vastaavasti teollisuudessa tapahtuvaa järjestelmien hallinnasta saavutettavia etuja. Merkittävämmät lämpöpumppujen rajapintoja hyödyntävät sovellukset koskevat hyödyt saavutetaan, kun ohjattavia lämpöpumppuja on useampia.
+  Yksittäisen lämpöpumpun ohjauksella saavutettavat hyödyt ovat lähinnä yksittäisen omakotitalokäyttäjän saavuttamia säästöjä tai vastaavasti teollisuudessa tapahtuvaa järjestelmien hallinnasta saavutettavia etuja. Merkittävämmät lämpöpumppujen rajapintoja hyödyntävät sovellukset koskevat hyödyt saavutetaan, kun ohjattavia lämpöpumppuja on useampia.
 
 \section{kysyntäjousto}
 
