Applications - remote management done

--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -165,6 +165,13 @@
   url          = {https://files.sma.de/downloads/STP3-6-3AV-40-BE-fi-14.pdf},
 }
 
+@misc{SmartConnected,
+	author       = {SMA},
+	title        = {SMA Smart Connected - Premium monitoring service for reliable system performance},
+	url          = {https://www.sma.de/en/products/monitoring-control/sma-smart-connected.html},
+	urldate      = {2020-08-26},
+}
+
 @misc{DNP3&61850,
 	author       = {Andrew West},
 	title        = {Integrating IEC 61850 & IEEE 1815 (DNP3)},
