--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -16,7 +16,11 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
   \end{itemize} \parencite{Latomaki}
   Esimerkiksi lämpöpumpun käyttäjän ollessa poissa kotoa, pystyy hän siitä huolimatta varmistamaan kotinsa lämpötilan ja järjestelmien toimivuuden. Myöskin virhetilanteissa pystytään reagoimaan nopeammin.
 
-  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helpompaa tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
+  Aurinkosähköjärjestelmän tapauksessa monitorointi tarkoittaa pääosin hetkellisen tuoton ja tuottohistorian tarkastelua. Toki tiedoista enemmän kiinnostunut voi myös tarkastella verkon tilaa invertterin kautta, sillä monissa inverttereissä pystyy jo katsomaan esimerkiksi verkon tehokerrointa sekä taajuutta. Etämonitorointia voidaan hyödyntää myös vikatilanteiden seuraamisessa, esimerkiksi SMA:n Smart Connected -palvelun avulla SMA hoitaa vikatilanteiden viestinnän asiakkaalle, sekä hoitaa oikeiden komponenttien tilaamisen huoltoyritykselle \parencite{SmartConnected}. Tällä tavalla asiakas saa laitteen nopeasti toimintakuntoon, eikä huoltoyrityksen tarvitse käydä ensin paikan päällä tarkistamassa laitetta vaan voi suoraan hoitaa huollon alusta loppuun. 
+
+  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muunmuassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helppo tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
+
+  Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija, sillä se voi tällöin rajoittaa maksimitehoa tai muuttaa esimerkiksi sen käyttäytymistä eri jännite- tai taajuusalueilla. Lisäksi se voi pakottaa koko järjestelmän pysäyttämisen. Tällä hetkellä verkonhaltijan etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään. 
 
   Kommunikointi lämpöpumpun ja asiakkaan päätelaitteen, joka voi olla esimerkiksi puhelin tai tietokone, voi tapahtua monella erilaisella tavalla. Monet lämpöpumppuvalmistajat tarjoavat lämpöpumppuihinsa lisäpalveluna etäohjaustoiminnallisuutta, joka näyttäytyy käyttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suuryttäjälle esimerkiksi mobiilisovelluksena tai selaimessa käytettävänä verkkosovelluksena. Lämpöpumpputoimittajan tarjoamissa ratkaisuissa ei vaadita käyttäjältä yleensä sen suurempaa perehtymistä tai asiantuntemusta. Toimittaja saattaa myös tarjota valmiita ratkaisuja lämpöpumpun integroimiseen taloautomaation kanssa.
 
