Few svg files added

--- a/tex/johdanto.tex
+++ b/tex/johdanto.tex
@@ -2,7 +2,7 @@ Vuonna 1882 New Yorkissa käynnistettiin Pearl Street Stationin voimalaitos, jok
 
 Nykyiset sähköverkot ovat pääosin suunniteltu keskitetyn energiantuotannon tarpeisiin, mutta uusiutuvien energialähteiden osuus kasvaa yhteiskunnassa jatkuvasti ja hajautu-neen energiantuotannon lisääntyessä älykkään verkon merkitys kasvaa. Vuodesta 2008 lähtien julkaisujen, joiden abstraktissa, otsikossa tai avainsanoissa mainitaan ”Smart Grid”, määrä on kasvanut huomattavasti Science Direct -julkaisualustalla. \parencite{Tuballa&Abundo}
 
-Electric Power Research Institute (EPRI) määrittelee älykkään sähköverkon siten, että se sisällyttää tieto- ja kommunikaatioteknologiaa sähköntuotannon, -jakelun ja -kulutuksen eri osa-alueisiin. Sen tavoitteena on minimoida ympäristövaikutuksia, parantaa luotettavuutta ja palvelua, vahvistaa markkinoita sekä vähentää kustannuksia ja parantaa tehokkuutta. \parencite{SGdefinition}
+Electric Power Research Institute (EPRI) määrittelee älykkään sähköverkon siten, että se sisällyttää tieto- ja kommunikaatioteknologiaa sähköntuotannon, -jakelun ja -kulutuksen eri osa-alueisiin. Sen tavoitteena on minimoida ympäristövaikutuksia, parantaa luotettavuutta ja palvelua, vahvistaa markkinoita sekä vähentää kustannuksia ja parantaa tehokkuutta. Käytännössä tämä tarkoittaa kahdensuuntaista kommunikaatiota kuluttajalta verkonhaltijalle, mutta myös verkonhaltijalta kuluttajalle, esimerkiksi etäohjauksen muodossa. \parencite{SGdefinition}
 
 Nykyiset älykkäät aurinkosähköinvertterit toimivat osana älykästä sähköverkkoa hyödyntäen esimerkiksi SunSpec Alliancen avointa standardia. Tämä standardi mahdollistaa eri valmistajien tuotteiden käytön samassa kohteessa, kun tiedonvaihto on standardoitua ja siten toimii yhdessä muiden, samaa standardia käyttävien tuotteiden kanssa. Suurista valmistajista esimerkiksi SMA, Yaskawa ja ABB ovat mukana SunSpec Alliancessa, ja standardi on käytössä laajalla tehoskaalalla laitteita, kuluttajapuolen muutamien kilowattien ratkaisuista kaupallisiin sähköntuotantoon tarkoitettuihin, kymmenien kilowattien inverttereihin. \parencite{SSProds}
 
@@ -12,4 +12,4 @@ Lämpöpumppujen kasvanut suosio avaa myös uusia mahdollisuuksia. Suuria määr
 
 Lämpöpumppuja ja aurinkosähköinverttereitä on siis mahdollista käyttää osana älykästä sähköverkkoa. Niiden ohjaus tapahtuu erilaisten standardoitujen rajapintojen kautta. Laitevalmistajien on tarjottava nämä rajapinnat. Rajapintoja voidaan hyödyntää monilla tavoilla ja monia valmiita teknisiä ratkaisuja on olemassa.
 
-Tässä työssä tarkastellaan aurinkosähköjärjestelmän ja sähkökäyttöisten lämpöpumppujen komponentteja ja toimintaa yleisellä tasolla järjestelmien ymmärtämiseksi. Tämän jälkeen perehdytään järjestelmien kommunikaatiorajapintoihin, niiden toimintaan ja niitä määrittäviin standardeihin. Lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sovelluksissa ja  eri sidosryhmien näkökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulko-puolella olevia ”off-grid” -järjestelmiä.
+Tässä työssä tarkastellaan aurinkosähköjärjestelmän ja sähkökäyttöisten lämpöpumppujen komponentteja ja toimintaa yleisellä tasolla järjestelmien ymmärtämiseksi. Tämän jälkeen perehdytään järjestelmien kommunikaatiorajapintoihin, niiden toimintaan ja niitä määrittäviin standardeihin. Lisäksi tarkastellaan rajapintojen hyödyntämismahdollisuuksia eri sovelluksissa ja eri sidosryhmien näkökulmasta. Sidosryhmien osalta työssä käsitellään Suomessa sijaitsevien järjestelmien kannalta relevantteja sidosryhmiä. Työssä ei ole tarkoitus käydä läpi sähköverkon ulko-puolella olevia ”off-grid” -järjestelmiä.
