--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -1,10 +1,10 @@
-Järjestelmien kanssa kommunikointi tapahtuu erilaisten standardien määrittelemien rajapintojen lävitse. Rajapintoja on määritelty eri abstraktiotasoille, ja osaltaan ne rakentuvat toistensa päälle. Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai sarjaliikenneprotokollia ei tässä työssä käsitellä tarkemmin. Tässä kappaleessa on kuvattu eri standardeissa määriteltyjen rajapintojen toimintaa ja käyttötarkoituksia.
+Kommunikaatio eri järjestelmien kanssa tapahtuu erilaisten standardien määrittelemien rajapintojen kautta. Rajapintoja on määritelty eri abstraktiotasoille ja ne rakentuvat osittain toistensa päälle. Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai sarjaliikenneprotokollia ei tässä työssä käsitellä tarkemmin. Tässä kappaleessa on kuvattu eri standardeissa määriteltyjen rajapintojen toimintaa ja käyttötarkoituksia.
 
 \section{Modbus}
 
-  Modbus on automaatiossa käytetty palvelin--asiakas-mallin viestintäprotokolla. Sen on alunperin kehittänyt vuonna 1979 yritys nimeltään Modicon käytettäväksi valmistamiens ohjelmoitavien logiikoiden eli \Gls{plc}:den väliseen viestintään. Nykyin Modicon on osa Ranskalaista Schneider Electriciä. Koska standardi on julkaistu avoimesti kaikkien käytettäväksi ja se on verrattain yksinkertainen, on se saavuttanut johtavan aseman teollisuudessa. Yleisimmille ohjelmointikielille on saatavilla modbus-standardin toteuttavat kirjastot, joiden avulla voidaan ohjelmallisesti  ohjata laitteita. Laajan levinneisyyden ansiosta modbus soveltuu monien eri valmistajien laitteiden järjestelmien kanssa käytettäväksi. Teollisuuden lisäksi protokollaa käytetään myös talo- ja kiinteistöautomaatiossa.\parencite{sousaPortugal, modbusAppSpec, modbusOrg}
+  Modbus on automaatiossa käytetty palvelin--asiakas-mallin viestintäprotokolla. Sen on alunperin kehittänyt vuonna 1979 yritys nimeltään Modicon käytettäväksi valmistamiensa ohjelmoitavien logiikoiden eli \Gls{plc}:den väliseen viestintään. Nykyin Modicon on osa ranskalaista Schneider Electriciä. Koska standardi on julkaistu avoimesti kaikkien käytettäväksi ja se on verrattain yksinkertainen, on se saavuttanut johtavan aseman teollisuudessa. Yleisimmille ohjelmointikielille on saatavilla Modbus-standardin toteuttavat kirjastot, joiden avulla voidaan ohjelmallisesti ohjata laitteita. Laajan levinneisyyden ansiosta Modbus soveltuu monien eri valmistajien laitteiden järjestelmien kanssa käytettäväksi. Teollisuuden lisäksi protokollaa käytetään myös talo- ja kiinteistöautomaatiossa.\parencite{sousaPortugal, modbusAppSpec, modbusOrg}
 
-  Vuonna 2004 Schneider Electric siirsi modbus-standardin hallinnan voittoa tavoittelemattomalle Modbus-järjestölle\footnote{Modbus Organization, Inc}. Järjestön muodostavat automaatiolaitteita valmistavat yritykset ja yksittäiset henkilöt ja sen tehtäviin kuuluu ylläpitää ja kehittää modbus-standardia ja siihen liittyviä documentteja sekä toimia etujärjestönä edistäen modbusin käyttöä. Modbusiin liittyvien documenttien ja julkaisujen avulla edistetään eri valmistajien järjestelmien välistä kommunikaatiota ja helpotetaan niiden integraatioita toisiinsa.  \parencite{modbusOrg}
+  Vuonna 2004 Schneider Electric siirsi standardin hallinnan voittoa tavoittelemattomalle Modbus-järjestölle\footnote{Modbus Organization, Inc}. Järjestön muodostavat automaatiolaitteita valmistavat yritykset ja yksittäiset henkilöt ja sen tehtäviin kuuluu ylläpitää ja kehittää Modbus-standardia ja siihen liittyviä documentteja sekä toimia etujärjestönä edistäen modbusin käyttöä. Modbusiin liittyvien dokumenttien ja julkaisujen avulla edistetään eri valmistajien järjestelmien välistä kommunikaatiota ja helpotetaan niiden integraatioita toisiinsa.  \parencite{modbusOrg}
 
   \subsection{viestintä ja tietomalli}
 
@@ -99,7 +99,7 @@ Järjestelmien kanssa kommunikointi tapahtuu erilaisten standardien määrittele
 
     Sarjaväylän yli toimivassa Modbusissa ADU siirretään käyttäen RS-485-standardia noudattavaa väylää tai RS-232-väylää pitkin. Oletuksena Modbus-standardi kehoittaa laitevalmistajia toteuttamaan ainakin RS-485-rajapinnan, RS-232-rajapinnan ollessa vapaaehtoinen. Modbus \gls{RTU} siirtää datan suoraan bitteinä. Modbus \gls{ASCII}:ssa taas jokainen tavu koodataan kahdeksi heksadesimaalimerkiksi ennen lähetystä, mikä heikentää sen tiedonsiirtokykyä. Modbus-standardi edellyttää, että kaikki laitteet tukevat ainakin Modbus RTU:ta Modbus ASCII:n ollessa suositeltu.\parencite{modbusSerialSpec}
 
-    Modbus TCP/IP:tä käytettäessä Modbus-liikenne voi kulkea normaalin Internet-liikenteen mukana, mikä tekee siitä huomattavan joustavan ratkaisun. TCP-portti 502 on varattu Modbus-sovelluksille.\parencite{modbusTCPIPSpec} Koska ADU:t lähetetään TCP-kehyksessä, niihin ei tarvitse laskea eikä lisätä tarkistussummaa. TCP-protokolla huolehtii paketin (kehys + ADU) perille pääsystä ja mahdollisista uudelleenlähetyksistä. Tietosuojasta voidaan huolehtia käyttämällä kommunikointiin \gls{VPN}-yhteyttä. Toinen turvallisuutta parantava keino on käyttää komminikointiin MODBUS/TCP Security -standardin mukaista TLS-salausta, jolloin liikenne kohdistetaan TCP-porttiin 802\parencite{modbusTCPIPTLSSpec}.
+    Modbus TCP/IP:tä käytettäessä Modbus-liikenne voi kulkea normaalin Internet-liikenteen mukana, mikä tekee siitä hyvin joustavan ratkaisun. TCP-portti 502 on varattu Modbus-sovelluksille.\parencite{modbusTCPIPSpec} Koska ADU:t lähetetään TCP-kehyksessä, niihin ei tarvitse laskea eikä lisätä tarkistussummaa. TCP-protokolla huolehtii paketin (kehys + ADU) perille pääsystä ja mahdollisista uudelleenlähetyksistä. Tietosuojasta voidaan huolehtia käyttämällä kommunikointiin \gls{VPN}-yhteyttä. Toinen turvallisuutta parantava keino on käyttää komminikointiin MODBUS/TCP Security -standardin mukaista TLS-salausta, jolloin liikenne kohdistetaan TCP-porttiin 802\parencite{modbusTCPIPTLSSpec}.
 
 \section{SunSpec Modbus}
   SunSpec Modbus on SunSpec Alliancen määrittelemä sovellustason toteutus, joka hyödyntää yleisesti käytössä olevaa Modbus-protokollaa. Fyysinen Modbus-rajapinta on sisäänrakennettu noin \SI{80}{\percent}:iin asennetuista hajautetun energiantuotannon laitteista, joten tämän toteutuksen tuominen suurelle määrälle laitteita on melko yksinkertaista \parencite{SSFactSheet}.
