--- a/tex/jarjestelmat_sahkon_tuottajina.tex
+++ b/tex/jarjestelmat_sahkon_tuottajina.tex
@@ -1,10 +1,15 @@
-Aurinkosähköjärjestelmät koostuvat aurinkopaneeleista, aurinkoinverttereistä sekä mahdollisista energiavarastoista. Riippuen järjestelmästä, aurinkopaneeliketjuun tai yk-sittäisiin paneeleihin voidaan kytkeä myös DC/DC-muunnin. Tästä saadaan lisähyötyjä varjostustilanteissa tai epätasaisessa auringonpaisteessa.  Kuvassa 1 näkyy aurin-kosähköjärjestelmän lohkokaavio, joka esittää verkkokytketyn järjestelmän komponentteja.
+Aurinkosähköjärjestelmät koostuvat aurinkopaneeleista, aurinkoinverttereistä sekä mahdollisista energiavarastoista. Riippuen järjestelmästä, aurinkopaneeliketjuun tai yksittäisiin paneeleihin voidaan kytkeä myös DC/DC-muunnin. Tästä saadaan lisähyötyjä varjostustilanteissa tai epätasaisessa auringonpaisteessa.  Kuvassa 1 näkyy aurinkosähköjärjestelmän lohkokaavio, joka esittää verkkokytketyn järjestelmän komponentteja.
+\begin{figure}
+  \centering
+  \includegraphics[width=0.5\textwidth]{figures/PV_system_components}
+  \caption{Aurinkosähköjärjestelmän komponentit}
+\end{figure}
 
 Järjestelmä tuottaa energiaa vain tiettyyn aikaan päivästä, ja sen tuottoteho voi vaihdella hyvin nopeasti säätilasta riippuen. Kotitaloudessa ylimitoitetut järjestelmät, joissa ei ole hyödynnetty kommunikaatiorajapintoja, syöttävät huipputehoaikana sähköä verkkoon päin. Kommunikaatiorajapintoja hyödyntämällä kotitaloudet voisivat hyödyntää tämän energian itse, liittämällä aurinkosähköjärjestelmän esimerkiksi kodin automaatioon.
 
-Järjestelmän koko, mahdolliset staattiset varjostuskohdat sekä tulevaisuuden laajenta-mistarpeet vaikuttavat järjestelmän suunnitteluun. Invertterin valinta vaikuttaa laite- ja asennuskustannuksiin sekä järjestelmän päivittäiseen energiantuotantoon, mutta myös järjestelmän turvallisuuteen ja suojalaitteiden tarpeeseen. Inverttereiden eri vaihtoehtoja käsitellään myöhemmin omassa kappaleessaan.
+Järjestelmän koko, mahdolliset staattiset varjostuskohdat sekä tulevaisuuden laajentamistarpeet vaikuttavat järjestelmän suunnitteluun. Invertterin valinta vaikuttaa laite- ja asennuskustannuksiin sekä järjestelmän päivittäiseen energiantuotantoon, mutta myös järjestelmän turvallisuuteen ja suojalaitteiden tarpeeseen. Inverttereiden eri vaihtoehtoja käsitellään myöhemmin omassa kappaleessaan.
 
-Osa kaupallisista järjestelmistä ylittää 1MW tehon. Tällaisille järjestelmille Fingrid asettaa rajoituksia kommunikaation reaaliaikaisuuden osalta; verkonhaltijan on lähetettävä järjestelmien mittaustietoja enintään 60 sekunnin päivityssyklillä. Tällöin verkonhaltijan vas-tuulla on toimittaa järjestelmään mittarit täyttääkseen Fingridin vaatimukset reaaliaikaisuudesta. \parencite{VJV2018} 
+Osa kaupallisista järjestelmistä ylittää 1MW tehon. Tällaisille järjestelmille Fingrid asettaa rajoituksia kommunikaation reaaliaikaisuuden osalta; verkonhaltijan on lähetettävä järjestelmien mittaustietoja enintään 60 sekunnin päivityssyklillä. Tällöin verkonhaltijan vastuulla on toimittaa järjestelmään mittarit täyttääkseen Fingridin vaatimukset reaaliaikaisuudesta. \parencite{VJV2018} 
 
 \section{Aurinkopaneelit}
   Aurinkopaneeleiden toiminta perustuu valosähköiseen ilmiöön. Ne koostuvat suuresta määrästä sarjaan kytkettyjä aurinkokennoja, joista jokainen tuottaa tyypillisesti täydessä auringonpaisteessa hieman alle 5 W tehon noin 0,5 V jännitteellä. \parencite{Messenger}
@@ -13,16 +18,17 @@ Osa kaupallisista järjestelmistä ylittää 1MW tehon. Tällaisille järjestelm
 
   Kennot ryhmitellään usein moduuleiksi, joiden kanssa rinnan kytketään ohitusdiodit. Jos kennot varjostuvat, ohitusdiodi ohittaa kyseisen moduulin, jossa varjostuneet kennot sijaitsevat, jolloin se ei aiheuta häviöitä muualla rajoittamalla muiden moduulien tai paneeleiden virtaa. Usein aurinkopaneelit ketjutetaan tarvittavan jännitteen saamiseksi, jolloin ohitusdiodien apu varjostustilanteissa on erittäin tärkeää, sillä muuten varjostuskohta rajoittaisi koko paneeliketjun virtaa. \parencite{Willeke&Weber}
 
-  Aurinkokennojen ja -paneelien toimintakäyrinä käytetään usein virta-jännite -käyrää ja siitä johdettua teho-jännite (engl. P-V) -käyrää. Kuten kuvasta 2 nähdään, P-V-käyrän huippukohdan sijainti vaihtelee valaisutehon mukaan. Tätä käyrän huippukohtaa kutsutaan huipputehopisteeksi (engl. maximum power point, MPP). Se näyttää jännitteen, jolla saavutetaan kennon tai paneelin huipputeho kullakin valaisuteholla.
+  Aurinkokennojen ja -paneelien toimintakäyrinä käytetään usein virta--jännite-käyrää ja siitä johdettua teho-jännite (engl. P-V) -käyrää. Kuten kuvasta 2 nähdään, P--V-käyrän huippukohdan sijainti vaihtelee valaisutehon mukaan. Tätä käyrän huippukohtaa kutsutaan huipputehopisteeksi (engl. maximum power point, MPP). Se näyttää jännitteen, jolla saavutetaan kennon tai paneelin huipputeho kullakin valaisuteholla.
   \begin{figure}
     \centering
     \includegraphics[width=0.5\textwidth]{figures/pvcurve}
-    \caption{JA Solarin erään aurinkopaneelin P-V-käyrä eri valaisutehoilla \parencite{JASolar}}
+    \caption{Esimerkki P--V-käyrästä}
   \end{figure}
-  Piirillä, jossa on sarjaan kytkettyjä aurinkopaneeleita, on jokaisella paneelilla oma paikal-linen huipputehopisteensä (engl. MPP - Maximum Power Point), mutta myös koko piiril-lä on yhteinen globaali huipputehopiste. Globaali huipputehopiste muuttuu varjostusten ja pilvisyyden mukaan koko järjestelmän tasolla ja sitä tarkkailemalla saadaan selville, millä jännitteellä koko järjestelmästä saadaan suurin teho.
+  
+  Piirillä, jossa on sarjaan kytkettyjä aurinkopaneeleita, on jokaisella paneelilla oma paikallinen huipputehopisteensä (engl. MPP - Maximum Power Point), mutta myös koko piirillä on yhteinen globaali huipputehopiste. Globaali huipputehopiste muuttuu varjostusten ja pilvisyyden mukaan koko järjestelmän tasolla ja sitä tarkkailemalla saadaan selville, millä jännitteellä koko järjestelmästä saadaan suurin teho.
 
 \section{Invertterit}
-  Invertteri eli vaihtosuuntaaja on laite, joka muuttaa tasasähköä vaihtosähköksi. Invertte-rin sisääntulojännite vaihtelee käyttötarkoituksen mukaan: kaupalliseen käyttöön tai suu-rempiin järjestelmiin tarkoitetut laitteet toimivat korkealla, jopa 1500V jännitteellä, koska niissä on pidemmät johdotusmatkat ja suurempi määrä paneeleita kytkettynä sarjaan. Kuluttajakäytössä taas voidaan käyttää selvästi pienemmän tason jännitteitä johdotusten ollessa huomattavasti lyhyempiä ja paneeleiden määrän ollessa pienempi.
+  Invertteri eli vaihtosuuntaaja on laite, joka muuttaa tasasähköä vaihtosähköksi. Invertterin sisääntulojännite vaihtelee käyttötarkoituksen mukaan: kaupalliseen käyttöön tai suurempiin järjestelmiin tarkoitetut laitteet toimivat korkealla, jopa 1500V jännitteellä, koska niissä on pidemmät johdotusmatkat ja suurempi määrä paneeleita kytkettynä sarjaan. Kuluttajakäytössä taas voidaan käyttää selvästi pienemmän tason jännitteitä johdotusten ollessa huomattavasti lyhyempiä ja paneeleiden määrän ollessa pienempi.
 
   Korkeampi jännitetaso keventää huomattavasti tarvittavaa johdotusta, kun virta voidaan pitää pienenä ja siten johtojen läpimitta pienenä. Myös häviöt pienenevät huomattavasti, koska johdoissa syntyvät häviöt kasvavat Ohmin lain
   \begin{equation}
@@ -30,37 +36,37 @@ Osa kaupallisista järjestelmistä ylittää 1MW tehon. Tällaisille järjestelm
   \end{equation}
   mukaan virran suhteen neliöllisenä.
 
-  Invertteri, jolla on valmiudet huipputehopisteen seurantaan (engl. MPP Tracking, MPPT), etsii siihen kytketyn aurinkopaneeliryhmän huipputehopistettä aktiivisesti. Pis-teen etsimiseen käytetään monia eri tekniikoita, mutta tämän työn kannalta niiden läpi-käynti ei ole relevanttia. Jos käytetty tekniikka on liian herkkä löytämään huipputehopis-teitä, se voi valita paikallisen pisteen globaalin sijaan ja aiheuttaa huomattavia tehohäviöitä väärän pisteen valinnalla. \parencite{Joshi&Arora}
+  Invertteri, jolla on valmiudet huipputehopisteen seurantaan (engl. MPP Tracking, MPPT), etsii siihen kytketyn aurinkopaneeliryhmän huipputehopistettä aktiivisesti. Pisteen etsimiseen käytetään monia eri tekniikoita, mutta tämän työn kannalta niiden läpikäynti ei ole relevanttia. Jos käytetty tekniikka on liian herkkä löytämään huipputehopisteitä, se voi valita paikallisen pisteen globaalin sijaan ja aiheuttaa huomattavia tehohäviöitä väärän pisteen valinnalla. \parencite{Joshi&Arora}
 
-  Aurinkopaneeliryhmän tehoa voidaan muuttaa kuormavastusta säätämällä. Huipputehopisteelle löytyy aina sitä vastaava ominaisvastus kaavan 2
+  Aurinkopaneeliryhmän tehoa voidaan muuttaa kuormavastusta säätämällä. Huipputehopisteelle löytyy aina sitä vastaava ominaisvastus kaavan 2.2
   \begin{equation}
     R_{CH} = \frac{V_{MPP}}{I_{MPP}}
   \end{equation}
 
   mukaisesti \parencite{Joshi&Arora}, ja invertteri säätää kuormavastuksen ominaisvastuksen mukaiseen arvoon, löydettyään järjestelmän huipputehopisteen mukaiset arvot kaavaan.
 
-  Invertterit voidaan jakaa pääosin kolmeen eri tyyppiin järjestelmien topologioiden mu-kaan: keskusinverttereihin, mikroinverttereihin sekä ketjuinverttereihin. Keskusinvertterit ovat kaupallisissa kohteissa käytettäviä, suuritehoisia inverttereitä, kun taas mikroinvert-terit ovat pääosin kuluttajakäyttöön suunnattuja laitteita. Ketjuinvertterit sijoittuvat näiden väliin ja laajan tehoskaalan vuoksi niitä voidaan käyttää molempien tyyppisissä kohteissa.
+  Invertterit voidaan jakaa pääosin kolmeen eri tyyppiin järjestelmien topologioiden mukaan: keskusinverttereihin, mikroinverttereihin sekä ketjuinverttereihin. Keskusinvertterit ovat kaupallisissa kohteissa käytettäviä, suuritehoisia inverttereitä, kun taas mikroinvertterit ovat pääosin kuluttajakäyttöön suunnattuja laitteita. Ketjuinvertterit sijoittuvat näiden väliin ja laajan tehoskaalan vuoksi niitä voidaan käyttää molempien tyyppisissä kohteissa.
 
 \subsection{Keskusinvertteri}
-  Keskusinvertterin teho on usein hyvin suuri, yli 50 kW:sta jopa muutamaan megawattiin. Niitä käytetään suurissa aurinkovoimaloissa, joissa ei usein tarvitse miettiä rakennel-mien tai puiden aiheuttamia varjostuksia. Tällöin asennuskustannukset pienenevät, sillä suuriin järjestelmiin riittää yksi invertteri.
+  Keskusinvertterin teho on usein hyvin suuri, yli 50 kW:sta jopa muutamaan megawattiin. Niitä käytetään suurissa aurinkovoimaloissa, joissa ei usein tarvitse miettiä rakennelmien tai puiden aiheuttamia varjostuksia. Tällöin asennuskustannukset pienenevät, sillä suuriin järjestelmiin riittää yksi invertteri.
 
-  Keskusinvertterin huonoja puolia ovat järjestelmän riippuvuus yksittäisestä invertteristä sekä vain muutama huipputehopiste koko järjestelmälle. Tällöin järjestelmässä tulee suuret tehohäviöt, jos esimerkiksi pilvi kulkee osittain paneelikentän yli ja huipputehopis-te määräytyy koko järjestelmälle, jolloin täysin auringossa olevien paneelien teho laskee huomattavasti. Käyttökohteiden ja suunnittelun takia tämä ei toisaalta vaikuta merkittä-västi järjestelmän tuottoon.
+  Keskusinvertterin huonoja puolia ovat järjestelmän riippuvuus yksittäisestä invertteristä sekä vain muutama huipputehopiste koko järjestelmälle. Tällöin järjestelmässä tulee suuret tehohäviöt, jos esimerkiksi pilvi kulkee osittain paneelikentän yli ja huipputehopiste määräytyy koko järjestelmälle, jolloin täysin auringossa olevien paneelien teho laskee huomattavasti. Käyttökohteiden ja suunnittelun takia tämä ei toisaalta vaikuta merkittävästi järjestelmän tuottoon.
 
 \subsection{Mikroinvertteri}
-  Mikroinvertteri on pienitehoinen vaihtosuuntaaja, joka on joko integroitu aurinkopaneelin yhteyteen tai asennettu sen välittömään läheisyyteen. Tämä tarkoittaa, että jokaiselta paneelilta voidaan säätää sen tehoa huipputehopisteen mukaiseksi. Tällöin saadaan epätasaisissa varjostustilanteissa paras mahdollinen teho, kun jokaisesta paneelista voi-daan maksimoida teho. Tämä johtuu siitä, että yhden paneelin varjostuminen ei vaikuta muiden paneelien tuottoon, koska paneelit eivät ole kytketty sarjaan.
+  Mikroinvertteri on pienitehoinen vaihtosuuntaaja, joka on joko integroitu aurinkopaneelin yhteyteen tai asennettu sen välittömään läheisyyteen. Tämä tarkoittaa, että jokaiselta paneelilta voidaan säätää sen tehoa huipputehopisteen mukaiseksi. Tällöin saadaan epätasaisissa varjostustilanteissa paras mahdollinen teho, kun jokaisesta paneelista voidaan maksimoida teho. Tämä johtuu siitä, että yhden paneelin varjostuminen ei vaikuta muiden paneelien tuottoon, koska paneelit eivät ole kytketty sarjaan.
 
-  Mikroinverttereiltä saadaan hyvin paljon tietoa, koska inverttereiden määrä järjestel-mässä on suuri. Tällöin saadaan reaaliaikaisesti kuva järjestelmän toimivuudesta, ja pie-netkin virhetilat voidaan korjata niiden ilmentyessä. Toisaalta inverttereiden määrä ai-heuttaa haasteita tiedon koostamisessa ja tiedonsiirrossa, koska tieto ei ole välttämättä keskitetysti yhdessä paikassa sellaisenaan, vaan voi vaatia ylimääräisiä komponentteja tiedon keräämiseen.
+  Mikroinverttereiltä saadaan hyvin paljon tietoa, koska inverttereiden määrä järjestelmässä on suuri. Tällöin saadaan reaaliaikaisesti kuva järjestelmän toimivuudesta, ja pienetkin virhetilat voidaan korjata niiden ilmentyessä. Toisaalta inverttereiden määrä aiheuttaa haasteita tiedon koostamisessa ja tiedonsiirrossa, koska tieto ei ole välttämättä keskitetysti yhdessä paikassa sellaisenaan, vaan voi vaatia ylimääräisiä komponentteja tiedon keräämiseen.
 
-  Kuluttajapuolen ratkaisuissa tiedonhallinta on usein toteutettu verkkokäyttöliittymällä, jol-loin jokainen invertteri on liitetty erilliseen laitteeseen, joka lähettää tiedot valmistajan omaan järjestelmään tiedon koontia varten. Tästä esimerkkinä Enphasen Envoy ja En-vertechin EnverBridge, jotka kommunikoivat valmistajan mikroinverttereiden kanssa PLC-väylän kautta. Sen jälkeen laite lähettää tiedot verkkoportaaliin, josta käyttäjä voi seurata paneelien tuotantoa ja järjestelmän toimivuutta.
+  Kuluttajapuolen ratkaisuissa tiedonhallinta on usein toteutettu verkkokäyttöliittymällä, jolloin jokainen invertteri on liitetty erilliseen laitteeseen, joka lähettää tiedot valmistajan omaan järjestelmään tiedon koontia varten. Tästä esimerkkinä Enphasen Envoy ja Envertechin EnverBridge, jotka kommunikoivat valmistajan mikroinverttereiden kanssa PLC-väylän kautta. Sen jälkeen laite lähettää tiedot verkkoportaaliin, josta käyttäjä voi seurata paneelien tuotantoa ja järjestelmän toimivuutta.
 
 \subsection{Ketjuinvertteri}
-  Ketjuinvertteriin kytketään nimensä mukaisesti sarjaan kytketyistä paneeleista muodos-tettuja ketjuja. Siinä on usein monta huipputehopisteen seurannan kytkentää, jolloin saadaan seurattua useita huipputehopisteitä invertteriä kohden. Invertterien teho vaihte-lee muutamasta kilowatista jopa satoihin kilowatteihin, jolloin sitä voidaan käyttää hyvin erikokoisissa järjestelmissä.
+  Ketjuinvertteriin kytketään nimensä mukaisesti sarjaan kytketyistä paneeleista muodostettuja ketjuja. Siinä on usein monta huipputehopisteen seurannan kytkentää, jolloin saadaan seurattua useita huipputehopisteitä invertteriä kohden. Invertterien teho vaihtelee muutamasta kilowatista jopa satoihin kilowatteihin, jolloin sitä voidaan käyttää hyvin erikokoisissa järjestelmissä.
 
-  Teholuokaltaan pienet ketjuinvertterit on suunniteltu käyttäjäystävällisyyshuomioiden, ja esimerkiksi SMA:n ja Huawein invertterit sisältävät integraation valmistajien taustajärjes-telmiin. SMA on toteuttanut tämän integraation valmiina, kun taas osa Huawein invertte-reistä vaatii sovittimen Ethernet-portin, WLANin tai matkapuhelinverkon käyttämiseen datasiirrossa.
+  Teholuokaltaan pienet ketjuinvertterit on suunniteltu käyttäjäystävällisyyshuomioiden, ja esimerkiksi SMA:n ja Huawein invertterit sisältävät integraation valmistajien taustajärjestelmiin. SMA on toteuttanut tämän integraation valmiina, kun taas osa Huawein inverttereistä vaatii sovittimen Ethernet-portin, WLANin tai matkapuhelinverkon käyttämiseen datasiirrossa.
 
-  SMAn invertterit käyttävät lisäksi SunSpec Alliancen Modbus-standardia, joka toimii Et-hernet-portin välityksellä. Muut standardia hyödyntävät valmistajat voivat kommunikoi-da suoraan SMAn inverttereiden kanssa standardoinnin takia. Huawei käyttää myös Modbus-protokollaa, mutta se ei ole SunSpec Alliancen standardoima. Tämä tarkoittaa, että Huawein kanssa kommunikoitaessa sille on kehitettävä oma rajapinta datan luke-miseksi.
+  SMAn invertterit käyttävät lisäksi SunSpec Alliancen Modbus-standardia, joka toimii Ethernet-portin välityksellä. Muut standardia hyödyntävät valmistajat voivat kommunikoida suoraan SMAn inverttereiden kanssa standardoinnin takia. Huawei käyttää myös Modbus-protokollaa, mutta se ei ole SunSpec Alliancen standardoima. Tämä tarkoittaa, että Huawein kanssa kommunikoitaessa sille on kehitettävä oma rajapinta datan lukemiseksi.
 
-  Modbusin hyödyntäminen mahdollistaa muiden valmistajien tuotteiden kommunikaation inverttereiden kanssa. Yhteinen standardi helpottaa suurissa järjestelmissä eri valmista-jien tuotteiden yhteensopivuuden kanssa, mutta ylipäätään Modbusin käyttö antaa mahdollisuuden kolmannen osapuolen tuotteiden liittämiseen.
+  Modbusin hyödyntäminen mahdollistaa muiden valmistajien tuotteiden kommunikaation inverttereiden kanssa. Yhteinen standardi helpottaa suurissa järjestelmissä eri valmistajien tuotteiden yhteensopivuuden kanssa, mutta ylipäätään Modbusin käyttö antaa mahdollisuuden kolmannen osapuolen tuotteiden liittämiseen.
 
 \section{Järjestelmien tuotto-ominaisuudet}
   Aurinkosähköjärjestelmät ovat sähköntuottajina teholtaan nopeasti muuttuvia. Niiden tuoton ennustaminen on jokseenkin mahdollista päivätasolla, mutta tunti- ja minuuttitason ennustaminen on haastavaa, jopa mahdotonta. Nykyisellä keskitettyyn sähköntuotantoon rakennetulla verkolla tämä aiheuttaa kuormitusta ja lisää säätövoiman tarvetta huomattavasti, mikäli aurinkosähkön tuotannon osuus kokonaistuotannosta kasvaa suureksi. 
