--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -1,4 +1,4 @@
-Järjestelmien kanssa kommunikointi tapahtuu erilaisten standardien määrittelemien rajapintojen lävitse. Rajapintoja on määritelty eri abstraktiotasoille, ja osaltaan ne rakentuvat toistensa päälle. Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai sarjaliikenneprotokollia ei tässä työssä käsitellä tarkemmin. Tässä kappaleessa on kuvattu eri standardeissa määriteltyjen rajapintojen toimintaa ja käyttötarkoituksia.
+Järjestelmien kanssa kommunikointi tapahtuu erilaisten standardien määrittelemien rajapintojen lävitse. Rajapintoja on määritelty eri tarkoituksiin ja abstraktiotasoille, ja osaltaan ne rakentuvat toistensa päälle. Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai sarjaliikenneprotokollia ei tässä työssä käsitellä tarkemmin. Tässä kappaleessa on kuvattu eri standardeissa määriteltyjen rajapintojen toimintaa ja käyttötarkoituksia.
 
 \section{Modbus}
 
